fix(jsx): Tighten up `.post-html p` whitespace.

--- a/packages/css/styles/post.scss
+++ b/packages/css/styles/post.scss
@@ -57,7 +57,13 @@
         }
 
         p {
-            margin-top: 0;
+            &:first-of-type {
+                margin-top: 0.5rem;
+            }
+
+            & + p {
+                margin-top: 0;
+            }
         }
     }
 
